Name:                hssqlppp-th
Version:             0.5.18
Synopsis:            hssqlppp extras which need template-haskell
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10
copyright:           Copyright 2009-2014 Jake Wheat
stability:           pre-alpha
homepage:            http://jakewheat.github.com/hssqlppp/
bug-reports:         https://github.com/JakeWheat/hssqlppp/issues
category:            Database,Language
Description:
    hssqlppp extras which need template-haskell
    .
    Documentation, examples on the homepage:
    <http://jakewheat.github.com/hssqlppp/>.
    .
    Changes here: <https://github.com/JakeWheat/hssqlppp/blob/master/CHANGES>

extra-source-files:  README
                     LICENSE

source-repository head
  type:     git
  location: https://github.com/JakeWheat/hssqlppp.git

Library
  Build-Depends:     base >= 4 && < 5,
                     template-haskell,
                     hssqlppp == 0.5.18,
                     syb >= 0.1.0.2 && < 0.5,
                     text >= 0.11.1.13 && < 1.3

  hs-source-dirs:      src
  Exposed-modules:     Database.HsSqlPpp.Quote
  default-extensions:  TupleSections
                       DeriveDataTypeable,
                       ScopedTypeVariables,
                       PatternGuards,
                       FlexibleContexts
  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite TestsTh
    type:       exitcode-stdio-1.0
    main-is:    TestsTh.lhs
    hs-source-dirs:    src,tests
    Build-Depends:     base >= 4 && < 5,
                       HUnit >= 1.2 && < 1.3,
                       syb >= 0.1.0.2 && < 0.5,
                       template-haskell,
                       test-framework >= 0.8 && < 0.9,
                       test-framework-hunit >= 0.3 && < 0.4,
                       text >= 0.11.1.13 && < 1.3,
                       hssqlppp == 0.5.18

  Other-Modules:       Database.HsSqlPpp.Tests.QuasiQuoteTests
  default-extensions:  TupleSections
                       DeriveDataTypeable,
                       ScopedTypeVariables,
                       PatternGuards,
                       FlexibleContexts
  default-language:    Haskell2010
  ghc-options:         -Wall
