Name:                hssqlppp-th
Version:             0.6.2
Synopsis:            hssqlppp extras which need template-haskell
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10
copyright:           Copyright 2009-2014 Jake Wheat
stability:           pre-alpha
homepage:            http://jakewheat.github.com/hssqlppp/
bug-reports:         https://github.com/JakeWheat/hssqlppp/issues
category:            Database,Language
Description:
    hssqlppp extras which need template-haskell
    .
    Documentation, examples on the homepage:
    <http://jakewheat.github.com/hssqlppp/>.
    .
    Changes here: <https://github.com/JakeWheat/hssqlppp/blob/master/CHANGES>

extra-source-files:  README
                     LICENSE

source-repository head
  type:     git
  location: https://github.com/JakeWheat/hssqlppp.git

Library
  Build-Depends:     base >= 4 && < 5,
                     template-haskell,
                     hssqlppp == 0.6.2,
                     syb >= 0.1.0.2 && < 0.8,
                     text >= 0.11.1.13 && < 1.3

  hs-source-dirs:      src
  Exposed-modules:     Database.HsSqlPpp.Quote
  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite TestsTh
    type:       exitcode-stdio-1.0
    main-is:    TestsTh.lhs
    hs-source-dirs:    src,tests
    Build-Depends:     base >= 4 && < 5,
                       syb >= 0.1.0.2 && < 0.8,
                       template-haskell,
                       tasty >= 0.10 && < 1.3,
                       tasty-hunit >= 0.9 && < 0.11,

                       text >= 0.11.1.13 && < 1.3,
                       hssqlppp == 0.6.2

  Other-Modules:       Database.HsSqlPpp.Tests.QuasiQuoteTests
                       Database.HsSqlPpp.Quote
  default-language:    Haskell2010
  ghc-options:         -Wall
