Name:                hssqlppp
Version:             0.5.21
Synopsis:            SQL parser and type checker
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat, SQream
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10
copyright:           Copyright 2009-2015 Jake Wheat, Copyright 2011-2015 SQream
homepage:            http://jakewheat.github.com/hssqlppp/
bug-reports:         https://github.com/JakeWheat/hssqlppp/issues
category:            Database,Language
Description:
    SQL parser and type checker, targets PostgreSQL SQL and PL/pgSQL.
    .
    Pre alpha: works well and is stable for a subset of SQL, but there
    are lots of unfinished areas and the api is likely to change a lot
    from release to release at this time.
    .
    Documentation, examples on the homepage:
    <http://jakewheat.github.com/hssqlppp/>.
    .
    Changes here: <https://github.com/JakeWheat/hssqlppp/blob/master/CHANGES>

extra-source-files:  README
                     LICENSE

source-repository head
  type:     git
  location: https://github.com/JakeWheat/hssqlppp.git

Library
  Build-Depends:     base >= 4 && < 5,
                     containers >= 0.3.0.0 && < 0.6,
                     mtl >= 2.0.1.0 && < 2.3,
                     parsec >= 3.1.2 && < 3.2,
                     pretty >= 1.0 && < 1.2,
                     syb >= 0.1.0.2 && < 0.7,
                     text >= 0.11.1.13 && < 1.3,
                     uniplate >= 1.6 && < 1.7,
                     transformers >= 0.4 && < 0.5,
                     pretty-show >= 1.6 && < 1.7

  hs-source-dirs:    src
  Exposed-modules:   Database.HsSqlPpp.Ast
                     Database.HsSqlPpp.Annotation
                     Database.HsSqlPpp.Catalog
                     Database.HsSqlPpp.LexicalSyntax
                     Database.HsSqlPpp.Parser
                     Database.HsSqlPpp.Pretty
                     Database.HsSqlPpp.Types
                     Database.HsSqlPpp.TypeChecker
                     Database.HsSqlPpp.Utility

                     -- find src -iname '*hs' | sed -e "s@src/@@" | sed -e "s@/@.@g" |sed -e "s/.lhs//" |sed -e "s/.hs//"
  Other-Modules:     Database.HsSqlPpp.Utils.Utils
                     Database.HsSqlPpp.Parsing.ParseErrors
                     Database.HsSqlPpp.Parsing.ParserInternal
                     Database.HsSqlPpp.Internals.Catalog.CatalogInternal
                     Database.HsSqlPpp.Internals.Catalog.DefaultTemplate1Catalog
                     Database.HsSqlPpp.Internals.Catalog.DefaultTSQLCatalog
                     Database.HsSqlPpp.Internals.Catalog.OdbcCatalog
                     Database.HsSqlPpp.Internals.TypesInternal
                     Database.HsSqlPpp.Internals.TypeChecking.Environment
                     Database.HsSqlPpp.Internals.TypeChecking.TypeConversion
                     Database.HsSqlPpp.Internals.TypeChecking.TypeConversion2
                     Database.HsSqlPpp.Internals.TypeChecking.SqlTypeConversion
                     Database.HsSqlPpp.Internals.TypeChecking.OldTypeConversion
                     Database.HsSqlPpp.Internals.TypeChecking.OldTediousTypeUtils
                     Database.HsSqlPpp.Internals.TypeChecking.Environment
                     Database.HsSqlPpp.Internals.AstInternal
                     Database.HsSqlPpp.SqlDialect

  default-extensions:  TupleSections
                      DeriveDataTypeable,
                      ScopedTypeVariables,
                      PatternGuards,
                      FlexibleContexts
  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite Tests
    type:       exitcode-stdio-1.0
    main-is:    Tests.lhs
    hs-source-dirs:    src,tests
    Build-Depends:     base >= 4 && < 5,
                       containers >= 0.3.0.0 && < 0.6,
                       haskell-src-exts >= 1.13 && < 1.17,
                       mtl >= 2.1 && < 2.3,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.0 && < 1.2,
                       syb >= 0.1.0.2 && < 0.7,
                       template-haskell,
                       tasty >= 0.10 && < 0.12,
                       tasty-hunit >= 0.9 && < 0.10,
                       text >= 0.11.1.13 && < 1.3,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.4 && < 0.5,
                       pretty-show >= 1.6 && < 1.7

                     -- rough start:
                     -- find src-extra/tests -iname '*hs' | sed -e "s@src-extra/tests/@@" | sed -e "s@/@.@g" |sed -e "s/.lhs//" |sed -e "s/.hs//"
  Other-Modules:     Database.HsSqlPpp.Annotation
                     Database.HsSqlPpp.Ast
                     Database.HsSqlPpp.Catalog
                     Database.HsSqlPpp.Internals.AstInternal
                     Database.HsSqlPpp.Internals.Catalog.CatalogInternal
                     Database.HsSqlPpp.Internals.Catalog.DefaultTSQLCatalog
                     Database.HsSqlPpp.Internals.Catalog.DefaultTemplate1Catalog
                     Database.HsSqlPpp.Internals.TypeChecking.Environment
                     Database.HsSqlPpp.Internals.TypeChecking.OldTediousTypeUtils
                     Database.HsSqlPpp.Internals.TypeChecking.OldTypeConversion
                     Database.HsSqlPpp.Internals.TypeChecking.SqlTypeConversion
                     Database.HsSqlPpp.Internals.TypeChecking.TypeConversion
                     Database.HsSqlPpp.Internals.TypeChecking.TypeConversion2
                     Database.HsSqlPpp.Internals.TypesInternal
                     Database.HsSqlPpp.LexicalSyntax
                     Database.HsSqlPpp.Parser
                     Database.HsSqlPpp.Parsing.ParseErrors
                     Database.HsSqlPpp.Parsing.ParserInternal
                     Database.HsSqlPpp.Pretty
                     Database.HsSqlPpp.SqlDialect
                     Database.HsSqlPpp.TypeChecker
                     Database.HsSqlPpp.Types
                     Database.HsSqlPpp.Utility
                     Database.HsSqlPpp.Utils.Utils
                     Database.HsSqlPpp.Utils.GroomUtils
                     Database.HsSqlPpp.Tests.Tests
                     Database.HsSqlPpp.Tests.TypeChecking.CaseExpressions
                     Database.HsSqlPpp.Tests.TypeChecking.TrefIdentifiers
                     Database.HsSqlPpp.Tests.TypeChecking.ScalarExprs
                     Database.HsSqlPpp.Tests.TypeChecking.Tpch
                     Database.HsSqlPpp.Tests.TypeChecking.Joins
                     Database.HsSqlPpp.Tests.TypeChecking.TSQL
                     Database.HsSqlPpp.Tests.TypeChecking.Rewrites
                     Database.HsSqlPpp.Tests.TypeChecking.SimpleQueryExprs
                     Database.HsSqlPpp.Tests.TypeChecking.ImplicitCasts
                     Database.HsSqlPpp.Tests.TypeChecking.TypeCheckTests
                     Database.HsSqlPpp.Tests.TypeChecking.Issues
                     Database.HsSqlPpp.Tests.TypeChecking.OdbcTypechecking
                     Database.HsSqlPpp.Tests.Parsing.SqlServer
                     Database.HsSqlPpp.Tests.Parsing.CreateTable
                     Database.HsSqlPpp.Tests.Parsing.Dml
                     Database.HsSqlPpp.Tests.Parsing.FunctionsDdl
                     Database.HsSqlPpp.Tests.Parsing.ScalarExprs
                     Database.HsSqlPpp.Tests.Parsing.SelectLists
                     Database.HsSqlPpp.Tests.Parsing.CombineQueryExprs
                     Database.HsSqlPpp.Tests.Parsing.Misc
                     Database.HsSqlPpp.Tests.Parsing.Joins
                     Database.HsSqlPpp.Tests.Parsing.MiscQueryExprs
                     Database.HsSqlPpp.Tests.Parsing.TableRefs
                     Database.HsSqlPpp.Tests.Parsing.Utils
                     Database.HsSqlPpp.Tests.Parsing.Plpgsql
                     Database.HsSqlPpp.Tests.Parsing.MiscDdl
                     Database.HsSqlPpp.Tests.Parsing.ParserTests
                     Database.HsSqlPpp.Tests.Parsing.LexerTests
                     Database.HsSqlPpp.Tests.Parsing.OdbcParsing
                     Database.HsSqlPpp.Tests.TpchData
                     Database.HsSqlPpp.Tests.TestTypes
                     Database.HsSqlPpp.Utils.Here

  default-extensions:  TupleSections
                       DeriveDataTypeable,
                       ScopedTypeVariables,
                       PatternGuards,
                       FlexibleContexts
  default-language:    Haskell2010
  ghc-options:         -Wall
