Name:                hssqlppp
Version:             0.6.2
Synopsis:            SQL parser and type checker
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat, SQream
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.10
copyright:           Copyright 2009-2015 Jake Wheat, Copyright 2011-2015 SQream
homepage:            http://jakewheat.github.com/hssqlppp/
bug-reports:         https://github.com/JakeWheat/hssqlppp/issues
category:            Database,Language
Description:
    SQL parser and type checker, targets PostgreSQL SQL and PL/pgSQL.
    .
    Pre alpha: works well and is stable for a subset of SQL, but there
    are lots of unfinished areas and the api is likely to change a lot
    from release to release at this time.
    .
    Documentation, examples on the homepage:
    <http://jakewheat.github.com/hssqlppp/>.
    .
    Changes here: <https://github.com/JakeWheat/hssqlppp/blob/master/CHANGES>

extra-source-files:  README
                     LICENSE

source-repository head
  type:     git
  location: https://github.com/JakeWheat/hssqlppp.git

Library
  Build-Depends:     base >= 4 && < 5,
                     containers >= 0.3.0.0 && < 0.7,
                     mtl >= 2.0.1.0 && < 2.3,
                     parsec >= 3.1.2 && < 3.2,
                     pretty >= 1.0 && < 1.2,
                     syb >= 0.1.0.2 && < 0.8,
                     text >= 0.11.1.13 && < 1.3,
                     uniplate >= 1.6 && < 1.7,
                     transformers >= 0.3 && < 0.6,
                     pretty-show >= 1.6 && < 1.10

  hs-source-dirs:    src
  Exposed-modules:   Database.HsSqlPpp.Annotation
                     Database.HsSqlPpp.Catalog
                     Database.HsSqlPpp.Dialect
                     Database.HsSqlPpp.Lex
                     Database.HsSqlPpp.Parse
                     Database.HsSqlPpp.Pretty
                     Database.HsSqlPpp.Syntax
                     Database.HsSqlPpp.Types
                     Database.HsSqlPpp.TypeCheck
                     Database.HsSqlPpp.Utility

                     -- find src -iname '*hs' | sed -e "s@src/@@" | sed -e "s@/@.@g" |sed -e "s/.lhs//" |sed -e "s/.hs//"
  Other-Modules:    Database.HsSqlPpp.Internals.TypeChecking.OldTediousTypeUtils
                    Database.HsSqlPpp.Internals.TypeChecking.TypeConversion.TypeConversion2
                    Database.HsSqlPpp.Internals.TypeChecking.TypeConversion.OldTypeConversion
                    Database.HsSqlPpp.Internals.TypeChecking.TypeConversion.TypeConversion
                    Database.HsSqlPpp.Internals.TypeChecking.TypeConversion.SqlTypeConversion
                    Database.HsSqlPpp.Internals.TypeChecking.Environment
                    Database.HsSqlPpp.Internals.LexInternal
                    Database.HsSqlPpp.Internals.Dialect
                    Database.HsSqlPpp.Internals.ParseInternal
                    Database.HsSqlPpp.Internals.PrettyInternal
                    Database.HsSqlPpp.Internals.Catalog.CatalogUtils
                    Database.HsSqlPpp.Internals.Catalog.CatalogTypes
                    Database.HsSqlPpp.Internals.Catalog.CatalogBuilder
                    Database.HsSqlPpp.Internals.Catalog.CatalogInternal
                    Database.HsSqlPpp.Internals.Catalog.CatalogNew
                    Database.HsSqlPpp.Internals.AstInternal
                    Database.HsSqlPpp.Internals.TypesInternal
                    Database.HsSqlPpp.Internals.ParseErrors
                    Database.HsSqlPpp.Internals.Utils
                    Database.HsSqlPpp.Dialects.SqlServer
                    Database.HsSqlPpp.Dialects.GeneratedPostgres
                    Database.HsSqlPpp.Dialects.Postgres
                    Database.HsSqlPpp.Dialects.Oracle
                    Database.HsSqlPpp.Dialects.OdbcCatalog
                    Database.HsSqlPpp.Dialects.BaseCatalog
                    Database.HsSqlPpp.Dialects.Ansi

  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite Tests
    type:       exitcode-stdio-1.0
    main-is:    Tests.lhs
    hs-source-dirs:    src,tests
    Build-Depends:     base >= 4 && < 5,
                       containers >= 0.3.0.0 && < 0.7,
                       haskell-src-exts >= 1.13 && < 1.22,
                       mtl >= 2.1 && < 2.3,
                       parsec >= 3.1 && < 3.2,
                       pretty >= 1.0 && < 1.2,
                       syb >= 0.1.0.2 && < 0.8,
                       template-haskell,
                       tasty >= 0.10 && < 1.3,
                       tasty-hunit >= 0.9 && < 0.11,
                       text >= 0.11.1.13 && < 1.3,
                       uniplate >= 1.6 && < 1.7,
                       transformers >= 0.3 && < 0.6,
                       pretty-show >= 1.6 && < 1.10

                     -- rough start:
                     -- find src-extra/tests -iname '*hs' | sed -e "s@src-extra/tests/@@" | sed -e "s@/@.@g" |sed -e "s/.lhs//" |sed -e "s/.hs//"
  Other-Modules:    Database.HsSqlPpp.Tests.TypeChecking.OdbcTypechecking
                    Database.HsSqlPpp.Tests.TypeChecking.Aggregates
                    Database.HsSqlPpp.Tests.TypeChecking.DDL
                    Database.HsSqlPpp.Tests.TypeChecking.Rewrites
                    Database.HsSqlPpp.Tests.TypeChecking.TrefIdentifiers
                    Database.HsSqlPpp.Tests.TypeChecking.ScalarExprs
                    Database.HsSqlPpp.Tests.TypeChecking.PrecisionAndNullable
                    Database.HsSqlPpp.Tests.TypeChecking.ImplicitCasts
                    Database.HsSqlPpp.Tests.TypeChecking.TypeConversion
                    Database.HsSqlPpp.Tests.TypeChecking.Joins
                    Database.HsSqlPpp.Tests.TypeChecking.InsertQueryExprs
                    Database.HsSqlPpp.Tests.TypeChecking.TSQL
                    Database.HsSqlPpp.Tests.TypeChecking.Tpch
                    Database.HsSqlPpp.Tests.TypeChecking.CaseExpressions
                    Database.HsSqlPpp.Tests.TypeChecking.QueryExprs
                    Database.HsSqlPpp.Tests.TypeChecking.TypeCheckTests
                    Database.HsSqlPpp.Tests.TypeChecking.SimpleQueryExprs
                    Database.HsSqlPpp.Tests.TypeChecking.Utils
                    Database.HsSqlPpp.Tests.TypeChecking.TrefSchemas
                    Database.HsSqlPpp.Tests.TypeChecking.Issues
                    Database.HsSqlPpp.Tests.TypeChecking.Updates
                    Database.HsSqlPpp.Tests.Tests
                    Database.HsSqlPpp.Tests.TestUtils
                    Database.HsSqlPpp.Tests.Parsing.Dml
                    Database.HsSqlPpp.Tests.Parsing.SqlServer
                    Database.HsSqlPpp.Tests.Parsing.Misc
                    Database.HsSqlPpp.Tests.Parsing.ScalarExprs
                    Database.HsSqlPpp.Tests.Parsing.Plpgsql
                    Database.HsSqlPpp.Tests.Parsing.LexerTests
                    Database.HsSqlPpp.Tests.Parsing.CreateTable
                    Database.HsSqlPpp.Tests.Parsing.SelectLists
                    Database.HsSqlPpp.Tests.Parsing.OdbcParsing
                    Database.HsSqlPpp.Tests.Parsing.FunctionsDdl
                    Database.HsSqlPpp.Tests.Parsing.Joins
                    Database.HsSqlPpp.Tests.Parsing.ParserTests
                    Database.HsSqlPpp.Tests.Parsing.Oracle
                    Database.HsSqlPpp.Tests.Parsing.Schemas
                    Database.HsSqlPpp.Tests.Parsing.MiscQueryExprs
                    Database.HsSqlPpp.Tests.Parsing.TableRefs
                    Database.HsSqlPpp.Tests.Parsing.MiscDdl
                    Database.HsSqlPpp.Tests.Parsing.Utils
                    Database.HsSqlPpp.Tests.Parsing.CombineQueryExprs
                    Database.HsSqlPpp.Tests.TestTypes
                    Database.HsSqlPpp.Tests.TpchData
                    Database.HsSqlPpp.Utils.Here
                    Database.HsSqlPpp.Utils.GroomUtils
                    Database.HsSqlPpp.Tests.TypeChecking.Catalog

    Database.HsSqlPpp.Annotation
    Database.HsSqlPpp.Catalog
    Database.HsSqlPpp.Dialect
    Database.HsSqlPpp.Dialects.Ansi
    Database.HsSqlPpp.Dialects.BaseCatalog
    Database.HsSqlPpp.Dialects.GeneratedPostgres
    Database.HsSqlPpp.Dialects.OdbcCatalog
    Database.HsSqlPpp.Dialects.Oracle
    Database.HsSqlPpp.Dialects.Postgres
    Database.HsSqlPpp.Dialects.SqlServer
    Database.HsSqlPpp.Internals.AstInternal
    Database.HsSqlPpp.Internals.Catalog.CatalogBuilder
    Database.HsSqlPpp.Internals.Catalog.CatalogInternal
    Database.HsSqlPpp.Internals.Catalog.CatalogTypes
    Database.HsSqlPpp.Internals.Catalog.CatalogUtils
    Database.HsSqlPpp.Internals.Catalog.CatalogNew
    Database.HsSqlPpp.Internals.Dialect
    Database.HsSqlPpp.Internals.LexInternal
    Database.HsSqlPpp.Internals.ParseErrors
    Database.HsSqlPpp.Internals.ParseInternal
    Database.HsSqlPpp.Internals.PrettyInternal
    Database.HsSqlPpp.Internals.TypeChecking.Environment
    Database.HsSqlPpp.Internals.TypeChecking.OldTediousTypeUtils
    Database.HsSqlPpp.Internals.TypeChecking.TypeConversion.OldTypeConversion
    Database.HsSqlPpp.Internals.TypeChecking.TypeConversion.SqlTypeConversion
    Database.HsSqlPpp.Internals.TypeChecking.TypeConversion.TypeConversion
    Database.HsSqlPpp.Internals.TypeChecking.TypeConversion.TypeConversion2
    Database.HsSqlPpp.Internals.TypesInternal
    Database.HsSqlPpp.Internals.Utils
    Database.HsSqlPpp.Lex
    Database.HsSqlPpp.Parse
    Database.HsSqlPpp.Pretty
    Database.HsSqlPpp.Syntax
    Database.HsSqlPpp.Tests.TypeChecking.AnsiScalarExprs
    Database.HsSqlPpp.TypeCheck
    Database.HsSqlPpp.Types
    Database.HsSqlPpp.Utility

  default-language:    Haskell2010
  ghc-options:         -Wall
