Name:                hssqlppp-make-website
Version:             0.5.10
Build-Type:          Simple
Cabal-Version:       >=1.10

Description:         the exe to build the hssqlppp website

executable MakeWebsite
  main-is:             MakeWebsite.lhs
  other-modules:       
  build-depends:       base >= 4 && < 5,
                       filepath >= 1.3 && < 1.4,
                       -- groom >= 0.1 && < 0.2,
                       -- haskell-src-exts >= 1.13 && < 1.16,
                       -- uniplate >= 1.6 && < 1.7,
                       -- parsec >= 3.1.2 && < 3.2,
                       pandoc >= 1.13 && < 1.14,
                       -- pandoc-types >= 1.12 && < 1.13,
                       -- blaze-html >= 0.7 && < 0.8,
                       directory >= 1.2 && < 1.3,
                       datetime >= 0.2 && < 0.3,
                       -- mtl >= 2.1 && < 2.3,
                       -- syb >= 0.1.0.2 && < 0.5,
                       -- attoparsec >= 0.10 && < 0.13,
                       -- text >= 0.11.1.13 && < 1.2,
                       filemanip >= 0.3 && < 0.4,
                       -- containers >= 0.3.0.0 && < 0.6,
                       -- template-haskell,
                       groom >=0.1 && < 0.2,
                       hssqlppp,
                       hssqlppp-th
  default-language:    Haskell2010
  ghc-options:         -Wall
