Name:                hssqlppp-make-website
Version:             0.5.22
Build-Type:          Simple
Cabal-Version:       >=1.10

Description:         the exe to build the hssqlppp website

executable MakeWebsite
  main-is:             MakeWebsite.lhs
  other-modules:       TestFileProcessor
                       Database.HsSqlPpp.Tests.TypeChecking.Rewrites
                       Database.HsSqlPpp.Tests.TypeChecking.PrecisionAndNullable
                       Database.HsSqlPpp.Tests.TypeChecking.TrefIdentifiers
                       Database.HsSqlPpp.Tests.TypeChecking.ImplicitCasts
                       Database.HsSqlPpp.Tests.TypeChecking.Joins
                       Database.HsSqlPpp.Tests.TypeChecking.Tpch
                       Database.HsSqlPpp.Tests.TypeChecking.Aggregates
                       Database.HsSqlPpp.Tests.TypeChecking.TypeCheckTests
                       Database.HsSqlPpp.Tests.TypeChecking.ScalarExprs
                       Database.HsSqlPpp.Tests.TypeChecking.Issues
                       Database.HsSqlPpp.Tests.TypeChecking.CaseExpressions
                       Database.HsSqlPpp.Tests.TypeChecking.SimpleQueryExprs
                       Database.HsSqlPpp.Tests.TypeChecking.TSQL
                       Database.HsSqlPpp.Tests.Parsing.CreateTable
                       Database.HsSqlPpp.Tests.Parsing.Plpgsql
                       Database.HsSqlPpp.Tests.Parsing.LexerTests
                       Database.HsSqlPpp.Tests.Parsing.MiscDdl
                       Database.HsSqlPpp.Tests.Parsing.CombineQueryExprs
                       Database.HsSqlPpp.Tests.Parsing.Joins
                       Database.HsSqlPpp.Tests.Parsing.Misc
                       Database.HsSqlPpp.Tests.Parsing.Oracle
                       Database.HsSqlPpp.Tests.Parsing.MiscQueryExprs
                       Database.HsSqlPpp.Tests.Parsing.SelectLists
                       Database.HsSqlPpp.Tests.Parsing.ScalarExprs
                       Database.HsSqlPpp.Tests.Parsing.Utils
                       Database.HsSqlPpp.Tests.Parsing.Dml
                       Database.HsSqlPpp.Tests.Parsing.FunctionsDdl
                       Database.HsSqlPpp.Tests.Parsing.SqlServer
                       Database.HsSqlPpp.Tests.Parsing.ParserTests
                       Database.HsSqlPpp.Tests.Parsing.TableRefs
                       Database.HsSqlPpp.Tests.TestUtils
                       Database.HsSqlPpp.Tests.TpchData
                       Database.HsSqlPpp.Utils.Here

  build-depends:       base >= 4 && < 5,
                       filepath >= 1.3 && < 1.5,
                       haskell-src-exts >= 1.13 && < 1.17,
                       uniplate >= 1.6 && < 1.7,
                       -- parsec >= 3.1.2 && < 3.2,
                       pandoc >= 1.15 && < 1.16,
                       -- pandoc-types >= 1.12 && < 1.13,
                       -- blaze-html >= 0.7 && < 0.8,
                       directory >= 1.2 && < 1.3,
                       --datetime >= 0.2 && < 0.3,
                       time >=1.5 && < 1.6,
                       -- mtl >= 2.1 && < 2.3,
                       -- syb >= 0.1.0.2 && < 0.6,
                       -- attoparsec >= 0.10 && < 0.13,
                       text >= 0.11.1.13 && < 1.3,
                       filemanip >= 0.3 && < 0.4,
                       old-locale >= 1.0 && < 1.1,
                       -- containers >= 0.3.0.0 && < 0.6,
                       template-haskell,
                       pretty-show >= 1.6 && < 1.7,
                       blaze-markup >= 0.6 && < 0.8,
                       highlighting-kate >= 0.5.9 && < 0.7,
                       hssqlppp,
                       hssqlppp-th
  default-language:    Haskell2010
  ghc-options:         -Wall
